fix: improve dark mode selection contrast and eraser for bound text

--- a/packages/excalidraw/css/theme.scss
+++ b/packages/excalidraw/css/theme.scss
@@ -226,7 +226,7 @@
     --color-slider-track: hsl(244, 23%, 39%);
 
     // will be inverted to a lighter color.
-    --color-selection: #3530c4;
+    --color-selection: #1d1a99;
 
     --color-icon-white: var(--color-gray-90);
 
